register,login, controllers, templates